--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
 }
 
 repositories {
+    google()
     jcenter()
 }
 
@@ -35,12 +36,16 @@ configurations {
 
 dependencies {
     def room_version = "1.1.1"
+    def lifecycle_version = "1.1.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "android.arch.persistence.room:runtime:$room_version"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.5"
+    kapt "android.arch.lifecycle:compiler:$lifecycle_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
