--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -35,23 +35,24 @@ configurations {
 }
 
 dependencies {
-    def room_version = "1.1.1"
-    def lifecycle_version = "1.1.1"
+    def room_version = '2.0.0-beta01'
+    def lifecycle_version = '2.0.0-beta01'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.5"
-    kapt "android.arch.lifecycle:compiler:$lifecycle_version"
-    kapt "android.arch.persistence.room:compiler:$room_version"
+    implementation 'com.google.android.material:material:1.0.0-rc02'
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    kapt "androidx.room:room-compiler:$room_version"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     ktlint "com.github.shyiko:ktlint:0.28.0"
-    implementation 'com.android.support:design:28.0.0-rc02'
+    implementation 'com.google.android.material:material:1.0.0-beta01'
 }
 
 task ktlint(type: JavaExec, group: "verification") {
